refactor: keep security magic strings next to their usage
Remove SecurityConstants; declare private constants in each config class,
and share Bearer prefix only from JwtAuthenticationFilter where it is used.

Co-authored-by: Cursor <cursoragent@cursor.com>